--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@tidbcloud/prisma-adapter": "^6.6.0",
     "@tidbcloud/serverless": "^0.2.0",
+    "@uploadthing/react": "^7.3.2",
+    "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.0",
@@ -28,6 +30,8 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.60.0",
     "tailwind-merge": "^3.3.1",
+    "uploadthing": "^7.7.3",
+    "uuid": "^11.1.0",
     "zod": "^4.0.5"
   },
   "devDependencies": {
@@ -36,6 +40,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.4.1",
     "prisma": "^6.12.0",
