--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.60.0",
+    "sharp": "^0.34.3",
     "tailwind-merge": "^3.3.1",
     "uploadthing": "^7.7.3",
     "uuid": "^11.1.0",
