--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "dotenv": "^17.2.0",
     "lucide-react": "^0.525.0",
     "next": "15.4.1",
