--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.60.0",
     "sharp": "^0.34.3",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
     "uploadthing": "^7.7.3",
     "uuid": "^11.1.0",
