--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@tanstack/react-query": "^5.83.0",
     "@tidbcloud/prisma-adapter": "^6.6.0",
     "@tidbcloud/serverless": "^0.2.0",
     "@uploadthing/react": "^7.3.2",
@@ -29,6 +30,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.0",
     "emoji-picker-react": "^4.13.2",
     "lucide-react": "^0.525.0",
