--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@clerk/nextjs": "^6.25.4",
     "@hookform/resolvers": "^5.1.1",
+    "@livekit/components-react": "^2.9.14",
+    "@livekit/components-styles": "^1.1.6",
     "@prisma/client": "^6.12.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -33,6 +35,8 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.0",
     "emoji-picker-react": "^4.13.2",
+    "livekit-client": "^2.15.4",
+    "livekit-server-sdk": "^2.13.1",
     "lucide-react": "^0.525.0",
     "next": "15.4.1",
     "next-themes": "^0.4.6",
